<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">IFBook</string>
    <string name="menu_settings">Settings</string>
    <string name="perfil">Perfil</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="recuperarSenha">Esqueci minha senha!</string>
    <string name="entrar">Entrar</string>
    <string name="bemvindo">Bem vindo ao IFBook\nA Rede Social do IFSP\nCampus São João da Boa Vista-SP</string>
    <string name="mensagens">MENSAGENS</string>
    <string name="classificados">CLASSIFICADOS</string>
    <string name="aniversariantes">ANIVERSARIANTES DA SEMANA</string>
    <string name="novoclassificado">NOVO CLASSIFICADO</string>
    <string name="editarclassificado">EDITAR CLASSIFICADO</string>
    <string name="apagarclassificado">APAGAR CLASSIFICADO</string>
    <string name="meusclassificados">EDITAR MEUS CLASSIFICADOS</string>
    <string name="novamensagem">NOVA MENSAGEM</string>
    <string name="editarmensagem">EDITAR MENSAGEM</string>
    <string name="apagarmensagem">APAGAR MENSAGEM</string>
    <string name="minhasmensagens">EDITAR MINHAS MENSAGENS</string>
    <string name="meuperfil">MEU PERFIL</string>
    <string name="perfilusuario">PERFIL DO USUÁRIO</string>
    <string name="editarperfil">EDITAR PERFIL</string>
    <string name="id">Id: </string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data: </string>
    <string name="idusuario">Id Usuario: </string>
    <string name="btnenviar">Enviar</string>
    <string name="arquivo">Arquivo</string>
    <string name="imagem">Imagem</string>
    <string name="camera">Camera</string>
    <string name="editar">Editar</string>
    <string name="salvar">Salvar</string>
    <string name="apelido">Apelido / Nome de usuário:</string>
    <string name="estadocivil">Estado Civil:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">E-Mail:</string>
    <string name="trabalho">Local de Trabalho:</string>
    <string name="title_activity_activity_cadastro_classificado">ActivityCadastroClassificado</string>
    <string name="title_activity_listar_meus_classificados">ListarMeusClassificados</string>
    <string name="title_activity_editar_meu_classificado">EditarMeuClassificado</string>
    <string name="title_activity_activity_editar_classificado">ActivityEditarClassificado</string>
    <string name="title_activity_activity_cadastro_menssagem">ActivityCadastroMenssagem</string>
    <string name="title_activity_lista_minhas_menssagens">ListaMinhasMenssagens</string>
    <string name="title_activity_activity_editar_menssagem">ActivityEditarMenssagem</string>

</resources>