<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgblank"
    android:orientation="vertical"
    tools:context=".ActivityEditarClassificado" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:orientation="vertical"
        android:scrollbars="none" >

        <TableRow
            android:id="@+id/linha01"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@color/bggreen" >

            <ImageView
                android:id="@+id/Home"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:gravity="center_vertical|left"
                android:onClick="ExibeHome"
                android:scaleType="fitStart"
                android:src="@drawable/logoifbook" />

            <ImageView
                android:id="@+id/exibePerfil2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/perfil"
                android:gravity="center_vertical|right"
                android:onClick="meuPerfil"
                android:scaleType="fitEnd"
                android:src="@drawable/foto_perfil" />
        </TableRow>

        <TableRow
            android:id="@+id/linha02"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@color/bggray" >

            <TextView
                android:id="@+id/botaoMenssagens"
                style="@style/TitulosBotoes"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="exibeMensagens"
                android:text="@string/mensagens" />

            <TextView
                android:id="@+id/botaoClassificados"
                style="@style/TitulosBotoes"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/bgblued"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="exibeClassificados"
                android:text="@string/classificados" />
        </TableRow>

        <LinearLayout
            android:id="@+id/linha03"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/bgbluem" >

            <TextView
                style="@style/TitulosBotoes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/editarclassificado" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/linha04"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgbluel"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/linha05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgbluel"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/IdClassificadoEditar"
                style="@style/TextoPerfilSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="id"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editarClassificadoTitulo"
                style="@style/TextoPerfilSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/titulo"
                android:inputType="text" />

            <EditText
                android:id="@+id/editarClassificadoDescricao"
                style="@style/TextoPerfilSmall"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/descricao"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/spClassificadoArea"
                style="@style/TextoPerfilSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/categoria" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:orientation="horizontal"
                android:scrollbars="none" >

                <Button
                    android:id="@+id/botaoImagemClassificadoEditar"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/bgbluel"
                    android:drawableTop="@drawable/camera"
                    android:ems="10"
                    android:text="@string/imagem"
                    android:textColor="@color/bggray" />

                <ImageView
                    android:id="@+id/imagemClassificadoEditar"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/image" />
            </LinearLayout>

            <Button
                android:id="@+id/botaoEditarClassificado"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/bgbluem"
                android:ems="10"
                android:onClick="postarClassificado"
                android:text="@string/btnenviar"
                android:textColor="@color/bgblank"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>