<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bggreen"
    android:gravity="center_vertical"
    tools:context=".Login" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/line01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/Home"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/logoifbook" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editLogin"
                style="@style/TextoPerfilMedium"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/login"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editSenha"
                style="@style/TextoPerfilMedium"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonEntrar"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@color/bgbluebutton"
                android:ems="10"
                android:text="@string/entrar"
                android:textColor="@color/bgblank"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/linkSenha"
                style="@style/TextoPerfilSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                android:ems="10"
                android:gravity="center"
                android:text="@string/recuperarSenha"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>